--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,20 +20,20 @@
   <!--<a routerLink="/login">Login</a>-->
   <!--<a routerLink="/register">Register</a>-->
   <!--<a routerLink="/user/:userId">Profile</a>-->
-  <ul>
+  <!--<ul>-->
 
-    <li class="list-group-item cl-list-item-borderless" style="display:inline">
-      <a routerLink="/login">Login</a>
-    </li>
+    <!--<li class="list-group-item cl-list-item-borderless" style="display:inline">-->
+      <!--<a routerLink="/login">Login</a>-->
+    <!--</li>-->
 
-    <li class="list-group-item cl-list-item-borderless" style="display:inline">
-      <a routerLink="/register">Register</a>
-    </li>
+    <!--<li class="list-group-item cl-list-item-borderless" style="display:inline">-->
+      <!--<a routerLink="/register">Register</a>-->
+    <!--</li>-->
 
-    <li class="list-group-item cl-list-item-borderless" style="display:inline">
-      <a routerLink="/user/{{userId}}">Profile</a>
-    </li>
+    <!--<li class="list-group-item cl-list-item-borderless" style="display:inline">-->
+      <!--<a routerLink="/user/{{userId}}">Profile</a>-->
+    <!--</li>-->
+  <!--</ul>-->
 
-  </ul>
   <router-outlet></router-outlet>
 </div>
