--- a/src/app/components/page/page-new/page-new.component.html
+++ b/src/app/components/page/page-new/page-new.component.html
@@ -23,13 +23,17 @@
 <div class="container">
   <form>
     <div class="form-group">
-      <label for="page-name">Name</label>
-      <input [(ngModel)]="newPage.name" type="text" class="form-control" id="page-name" placeholder="Page Name" [ngModelOptions]="{standalone: true}">
+      <label for="name">Name</label>
+      <input [(ngModel)]="newPage.name" type="text" class="form-control" name="name" id="name" placeholder="Page Name" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group-pagenew">
-      <label for="page-title">Description</label>
-      <input [(ngModel)]="newPage.description" type="text" class="form-control" id="page-title" placeholder="Page Title" [ngModelOptions]="{standalone: true}">
+      <label for="title">Title</label>
+      <input [(ngModel)]="newPage.title" type="text" class="form-control" name="title" id="title" placeholder="Page Title" ngModel required>
     </div>
+      <div class="form-group">
+      <label for="description">Description</label>
+      <input [(ngModel)]="newPage.description" type="text" class="form-control" name="description" id="description" placeholder="Page Description" ngModel required>
+      </div>
   </form>
 </div>
 
