--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -1,62 +1,63 @@
-<nav class="navbar navbar-fixed-top cl-blue-navbar">
-  <div class="row">
-    <div class="col-xs-4 hidden-xs">
-      <div class="container-fluid">
-        <p class="navbar-text pull-left">
-          <a routerLink="/user/{{uid}}/website" class="navbar-link cl-text-white">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-          </a>
-        </p>
-        <a class="cl-text-white navbar-brand cl-text-bold" routerLink=".">
-          Websites
-        </a>
-        <a routerLink="['/#']" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
-          <span class="glyphicon glyphicon-plus"></span>
-        </a>
-      </div>
+<nav class="navbar navbar-fixed-top navbar-light bg-primary">
+  <div class="col-xs-5 hidden-xs">
+    <div class="navbar-text pull-left">
+      <a routerLink="/user/{{uid}}/website" class="navbar-link text-white">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
     </div>
-    <!--<div class="col-xs-8">-->
-    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-      <div class="container-fluid">
-        <a class="cl-text-white navbar-brand cl-text-bold" routerLink=".">
-          New Websites
-        </a>
-        <a (click)="createWebsite(newWebsite)" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
-          <span class="glyphicon glyphicon-ok"></span>
-        </a>
-      </div>
+
+    <div class="text-white navbar-brand font-weight-bold" [routerLink]="['/#']">
+      Websites
     </div>
+    <a [routerLink]="['/#']" class="navbar-link navbar-text pull-right text-white">
+      <span class="glyphicon glyphicon-plus"></span>
+    </a>
+
+  </div>
+  <div class="col-xs-7">
+    <div class="navbar-text pull-left visible-xs">
+      <a routerLink="/user/{{uid}}/website/" class="navbar-link text-white">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+    </div>
+    <div class="text-white navbar-brand font-weight-bold" [routerLink]="['/#']">
+      New Website
+    </div>
+    <a (click)="createWebsite(newWebsite)" class="navbar-link navbar-text pull-right text-white">
+      <span class="glyphicon glyphicon-ok"></span>
+    </a>
+
   </div>
 </nav>
 
-<div class="contain-fluid">
-  <div class="col-xs-4 hidden-xs">
-    <ul class="list-group cl-list-group-borderless">
-      <li *ngFor="let website of websites" class="list-group-item cl-list-item-borderless">
-        <a routerLink="/user/{{uid}}/website/{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a>
-        <a routerLink="/user/{{uid}}/website/{{website._id}}/page">{{website.name}}</a>
-      </li>
-    </ul>
-  </div>
-  <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 borders">
-    <form>
-      <div class="form-group">
-        <label for="website-name">Name</label>
-        <input [(ngModel)]="newWebsite.name" type="text" class="form-control" id="website-name" placeholder="Name" [ngModelOptions]="{standalone: true}">
-      </div>
-      <div class="form-group">
-        <label for="website-description">Description</label>
-        <textarea [(ngModel)]="newWebsite.description" id="website-description" class="form-control" rows="5" placeholder="Description" [ngModelOptions]="{standalone: true}"></textarea>
-      </div>
-    </form>
-  </div>
-</div>
+<div class="col-xs-4 hidden-xs cl-body-padding cl-full-height">
 
-<nav class="navbar navbar-fixed-bottom cl-blue-navbar">
-  <div class="container-fuild">
-    <a routerLink="/user/{{uid}}" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
-      <span class="glyphicon glyphicon-user"></span>
+  <div *ngFor="let website of websites" class="row extra-padding">
+    <a class="cl-left-padding" routerLink="/user/{{uid}}/website/{{website._id}}/page">{{website.name}}</a>
+    <a class="pull-right" routerLink="/user/{{uid}}/website/{{website._id}}">
+      <i class="glyphicon glyphicon-cog text-primary"></i>
     </a>
   </div>
-</nav>
 
+</div>
+
+<div class="col-xs-1 hidden-xs cl-full-height cl-right-divider"></div>
+
+<div class="col-xs-7 cl-body-padding">
+  <form>
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input [(ngModel)]="newWebsite.name" type="text" class="form-control" id="name" name="name" placeholder="Name" ngModel required>
+    </div>
+    <div class="form-group">
+      <label for="description">Description</label>
+      <textarea [(ngModel)]="newWebsite.description" id="description" name="description" class="form-control" rows="5" placeholder="Description"></textarea>
+    </div>
+  </form>
+</div>
+
+<nav class="navbar navbar-fixed-bottom navbar-light bg-primary">
+  <a class="navbar-brand pull-right" routerLink="/user/{{uid}}">
+    <i class="glyphicon glyphicon-user text-white"></i>
+  </a>
+</nav>
