--- a/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
@@ -13,7 +13,7 @@
       </a>
     </div>
     <a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">
-      Widgets Edit {{widget.widgetType}}
+      Widgets Edit
     </a>
   </div>
 </nav>
