--- a/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
+++ b/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
@@ -1,47 +1,3 @@
-<!--<nav class="navbar navbar-default navbar-fixed-top">-->
-  <!--<div class="container-fluid row">-->
-    <!--<div class="navbar-text pull-left">-->
-      <!--<a routerLink=".." class="cl-text-black cl-icon-padding">-->
-        <!--<span class="glyphicon glyphicon-chevron-left">-->
-        <!--</span>-->
-      <!--</a>-->
-    <!--</div>-->
-    <!--<div class="navbar-text pull-right">-->
-      <!--<a (click)="updateOrCreateWidget()" class="cl-icon-padding cl-text-black">-->
-        <!--<span class="glyphicon glyphicon-ok">-->
-        <!--</span>-->
-      <!--</a>-->
-    <!--</div>-->
-    <!--<a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">-->
-      <!--Widgets Edit-->
-    <!--</a>-->
-  <!--</div>-->
-<!--</nav>-->
-
-<!--<div class="container">-->
-  <!--<form>-->
-    <!--<div class="form-group">-->
-      <!--<label for="heading-name">Name (actually there is no attribute for this according to assignment doc)</label>-->
-      <!--<input [(ngModel)]="widget.text" type="text" class="form-control" id="heading-name" placeholder="Name">-->
-    <!--</div>-->
-    <!--<div class="form-group">-->
-      <!--<label for="html-editor">HTML</label>-->
-      <!--<input [(ngModel)]="widget.text" id="html-editor" class="form-control" placeholder="html-editor" [ngModelOptions]="{standalone: true}">-->
-    <!--</div>-->
-  <!--</form>-->
-  <!--<a class="btn btn-danger  btn-block" (click)="deleteWidget()">Delete</a>-->
-<!--</div>-->
-
-<!--<nav class="navbar navbar-default navbar-fixed-bottom">-->
-  <!--<div class="container-fluid row">-->
-    <!--<div class="pull-right navbar-text">-->
-      <!--<a routerLink="../../../../../.." class="cl-icon-padding">-->
-        <!--<span class="glyphicon glyphicon-user"></span>-->
-      <!--</a>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</nav>-->
-
 <nav class="navbar navbar-fixed-top navbar-light bg-secondary">
   <a class="btn navbar-brand" routerLink="..">
     <span class="glyphicon glyphicon-chevron-left text-dark"></span>
@@ -62,7 +18,7 @@
     <div class="form-group">
       <label for="html">HTML</label>
       <!-- <input [(ngModel)]="widget.text" type="text" class="form-control" name="text" placeholder="Text"> -->
-      <quill-editor [(ngModel)]="widget.text" id="html" [ngModelOptions]="{standalone: true}"></quill-editor>
+      <quill-editor [(ngModel)]="widget.text" name = "text" id="html"></quill-editor>
     </div>
   </form>
   <a (click)="deleteWidget()" class="btn btn-block btn-danger">Delete</a>
