--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -11,8 +11,8 @@
 </nav>
 
 <div id="sortable" class="cl-body-padding" appSortable (newIndexes)="reorderWidgets($event)">
-  <div *ngFor="let widget of widgets">
-    <div *ngIf="widget.widgetType == 'HEADER'">
+  <div *ngFor="let widget of widgets | orderBy">
+    <div *ngIf="widget.type == 'HEADER'">
       <div class="pull-right">
         <a [routerLink]="['/#']" class="pull-right">
           <span class="glyphicon glyphicon-menu-hamburger"></span>
@@ -24,7 +24,7 @@
       <h1>{{widget.text}}</h1>
     </div>
 
-    <div *ngIf="widget.widgetType == 'HTML'">
+    <div *ngIf="widget.type == 'HTML'">
       <div class="pull-right">
         <a [routerLink]="['/#']" class="pull-right">
           <span class="glyphicon glyphicon-menu-hamburger"></span>
@@ -33,22 +33,33 @@
           <span class="glyphicon glyphicon-cog"></span>
         </a>
       </div>
-      <h1>{{widget.text}}</h1>
+      <!--<h1>Html name: {{widget.name}}</h1>-->
+      <div [innerHTML]="widget.text"></div>
     </div>
 
-    <div *ngIf="widget.widgetType == 'TEXT'">
-      <div class="pull-right">
-        <a [routerLink]="['/#']" class="pull-right">
-          <span class="glyphicon glyphicon-menu-hamburger"></span>
-        </a>
-        <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/{{widget._id}}">
-          <span class="glyphicon glyphicon-cog"></span>
-        </a>
+    <div *ngIf="widget.type == 'TEXT'">
+      <!--<div class="pull-right">-->
+        <!--<a [routerLink]="['/#']" class="pull-right">-->
+          <!--<span class="glyphicon glyphicon-menu-hamburger"></span>-->
+        <!--</a>-->
+        <!--<a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/{{widget._id}}">-->
+          <!--<span class="glyphicon glyphicon-cog"></span>-->
+        <!--</a>-->
+      <!--&lt;!&ndash;<div [innerHTML]="widget.text"></div>&ndash;&gt;-->
+        <!--<h1>{{widget.name}}</h1>-->
+      <div *ngIf="widget.formatted">
+        <quill-editor [(ngModel)]="widget.text" name="text"></quill-editor>
       </div>
-      <h1>{{widget.text}}</h1>
+
+      <input *ngIf="!widget.formatted && (!widget.rows || widget.rows===1)"
+             placeholder="{{widget.placeholder}}" class="form-control"/>
+
+      <textarea *ngIf="!widget.formatted && (widget.rows > 1)"
+                rows="{{widget.rows}}" placeholder="{{widget.placeholder}}"
+                class="form-control">{{widget.text}}</textarea>
     </div>
 
-    <div *ngIf="widget.widgetType == 'IMAGE'">
+    <div *ngIf="widget.type == 'IMAGE'">
       <div>
         <a [routerLink]="['/#']" class="pull-right">
           <span class="glyphicon glyphicon-menu-hamburger"></span>
@@ -56,14 +67,15 @@
         <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/{{widget._id}}" class="pull-right">
           <span class="glyphicon glyphicon-cog"></span>
         </a>
+        <!-- <img class="img-responsive cl-widget-images" src="{{baseUrl}}/api/image/{{widget.url}}" alt="alt" width="widget.width"> -->
         <img class="img-responsive cl-widget-images" src="{{widget.url}}" alt="alt" width="widget.width">
       </div>
       <br>
     </div>
 
-    <div class="embed-responsive embed-responsive-16by9" *ngIf="widget.widgetType == 'YOUTUBE'">
+    <div class="embed-responsive embed-responsive-16by9" *ngIf="widget.type == 'YOUTUBE'">
       <div>
-        <iframe width="{{widget.width}}" height="360" [src]="modifyURL(widget.url)" frameborder="0" allowfullscreen>
+        <iframe width="{{widget.width}}" height="{{widget.height}}" [src]="photoURL(widget.url)" frameborder="0" allowfullscreen>
         </iframe>
         <a [routerLink]="['/#']" class="pull-right">
           <span class="glyphicon glyphicon-menu-hamburger" style="  background-color: white"></span>
@@ -88,91 +100,3 @@
     <span class="glyphicon glyphicon-user text-primary"></span>
   </a>
 </nav>
-
-
-<!--<nav class="navbar navbar-default navbar-fixed-top">-->
-  <!--<div class="container-fluid row">-->
-    <!--<div class="navbar-text pull-left">-->
-      <!--<a routerLink="../.." class="cl-text-black cl-icon-padding">-->
-        <!--<span class="glyphicon glyphicon-chevron-left">-->
-        <!--</span>-->
-      <!--</a>-->
-    <!--</div>-->
-    <!--<div class="navbar-text pull-right">-->
-      <!--<a routerLink="./new" class="cl-icon-padding cl-text-black">-->
-        <!--<span class="glyphicon glyphicon-plus">-->
-        <!--</span>-->
-      <!--</a>-->
-    <!--</div>-->
-    <!--<a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">-->
-      <!--Widgets-->
-    <!--</a>-->
-  <!--</div>-->
-<!--</nav>-->
-
-<!--<div class="container cl-container-padding" appSortable (newIndexes)="reorderWidgets($event)">-->
-  <!--<div *ngFor="let widget of widgets">-->
-
-    <!--<div [ngSwitch]="widget.widgetType">-->
-
-      <!--<div>-->
-
-        <!--<div class="pull-right">-->
-          <!--<a routerLink="." class="pull-right">-->
-            <!--<span class="glyphicon glyphicon-menu-hamburger"></span>-->
-          <!--</a>-->
-          <!--<a routerLink="./{{widget._id}}">-->
-            <!--<span class="glyphicon glyphicon-cog"></span>-->
-          <!--</a>-->
-        <!--</div>-->
-        <!--<div *ngSwitchCase="'HEADING'">-->
-          <!--<div [ngSwitch]="widget.size">-->
-            <!--<h1 *ngSwitchCase="1">{{widget.text}}</h1>-->
-            <!--<h2 *ngSwitchCase="2">{{widget.text}}</h2>-->
-            <!--<h3 *ngSwitchCase="3">{{widget.text}}</h3>-->
-            <!--<h4 *ngSwitchCase="4">{{widget.text}}</h4>-->
-            <!--<h5 *ngSwitchCase="5">{{widget.text}}</h5>-->
-            <!--<h6 *ngSwitchCase="6">{{widget.text}}</h6>-->
-          <!--</div>-->
-        <!--</div>-->
-
-        <!--<div *ngSwitchCase="'YOUTUBE'">-->
-          <!--<div class="embed-responsive embed-responsive-16by9">-->
-            <!--<iframe width="640" height="360" [src]="widget.url" frameborder="0" allowfullscreen></iframe>-->
-          <!--</div>-->
-        <!--</div>-->
-
-        <!--<div *ngSwitchCase="'IMAGE'">-->
-          <!--<img class="img-responsive img-rounded cl-widget-images" src="{{widget.url}}">-->
-        <!--</div>-->
-
-        <!--<div *ngSwitchCase="'HTML'" [innerHTML]="widget.text">-->
-        <!--</div>-->
-
-        <!--<div *ngSwitchCase="'TEXT'">-->
-          <!--<p>{{widget.text}}</p>-->
-        <!--</div>-->
-      <!--</div>-->
-
-    <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
-
-<!--<nav class="navbar navbar-default navbar-fixed-bottom">-->
-  <!--<div class="container-fluid row">-->
-    <!--<div class="pull-right navbar-text">-->
-      <!--<a routerLink="../../../../.." class="cl-icon-padding">-->
-        <!--<span class="glyphicon glyphicon-user"></span>-->
-      <!--</a>-->
-    <!--</div>-->
-
-    <!--<div class="pull-left navbar-text">-->
-      <!--<a routerLink="." class="cl-icon-padding cl-text-black">-->
-        <!--<span class="glyphicon glyphicon-play"></span>-->
-      <!--</a>-->
-      <!--<a routerLink="." class="cl-icon-padding cl-text-black">-->
-        <!--<span class="glyphicon glyphicon-eye-open"></span>-->
-      <!--</a>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</nav>-->
