--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -1,3 +1,14 @@
+<nav class="navbar navbar-fixed-top navbar-light bg-secondary">
+  <a class="btn navbar-brand" routerLink="../..">
+    <span class="glyphicon glyphicon-chevron-left text-dark"></span>
+  </a>
+  <div class="navbar-brand font-weight-bold">
+    Widget chooser
+  </div>
+  <a class="btn navbar-brand pull-right" routerLink="./new">
+    <span class="glyphicon glyphicon-plus text-dark"></span>
+  </a>
+</nav>
 
 <div class="container-fluid cl-container-padding">
   <ul class="list-group cl-list-group-borderless">
