--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-fixed-top navbar-light bg-secondary">
-  <a class="btn navbar-brand" routerLink="../..">
+  <a class="btn navbar-brand" routerLink="..">
     <span class="glyphicon glyphicon-chevron-left text-dark"></span>
   </a>
   <div class="navbar-brand font-weight-bold">
