can update user now

--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -6,7 +6,7 @@
   <div class="navbar-brand text-white font-weight-bold">
     Profile
   </div>
-  <a class="navbar-brand btn pull-right" (click)="updateUser(user)">
+  <a class="navbar-brand btn pull-right" (click)="updateUser()">
     <span class="glyphicon glyphicon-ok text-white"></span>
   </a >
 </nav>
