--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="form-group">
-    <a class="btn btn-primary btn-block" routerLink="/user/{{uid}}/website">Websites</a>
+    <a class="btn btn-primary btn-block" routerLink="/user/{{user._id}}/website">Websites</a>
     </div>
 
     <div class="form-group">
@@ -55,8 +55,7 @@
     </div>
 
     <div class="form-group">
-    <a class="btn btn-danger  btn-block"
-     routerLink="/login">Logout</a>
+    <a (click)="logout()" class="btn btn-danger  btn-block">Logout</a>
     </div>
   </form>
 </div>
